--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: Title Font;
-    src: url("/Users/thomashowell/Desktop/Sejdyes/bakery.ttf");
+    src: url("bakery.ttf");
 }
 
 .center{
@@ -53,23 +53,19 @@ p{
 </head>
 
 <body>
-<h1>Sejdyes</h1>
+<h1>SejDyes</h1>
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce imperdiet ipsum sed finibus rutrum. Cras eget nulla efficitur, molestie elit ut, tempus ligula. Donec auctor ornare urna, id feugiat mauris euismod sit amet. Integer et orci orci. Aliquam consectetur congue mollis. Donec finibus varius eros, tempus luctus libero pretium vitae. Mauris eu purus nec nunc aliquam finibus sed aliquet ante. Integer sem neque, consequat vitae lobortis ut, sollicitudin quis lectus. Duis quis ullamcorper purus. Nullam tellus mi, aliquet iaculis erat at, sollicitudin lobortis lorem.</p>
 
 
 
-<img src="/Users/thomashowell/Desktop/Sejdyes/placeholder.png" alt="placeholder" width="400" height="400" align="left">
-<img src="/Users/thomashowell/Desktop/Sejdyes/placeholder.png" alt="placeholder" width="618" height="618" align="center">
-<img src="/Users/thomashowell/Desktop/Sejdyes/placeholder.png" alt="placeholder" width="400" height="400" align="right">
+<img src="placeholder.png" alt="placeholder" width="400" height="400" align="left">
+<img src="placeholder.png" alt="placeholder" width="618" height="618" align="center">
+<img src="placeholder.png" alt="placeholder" width="400" height="400" align="right">
 
 
 
-<p>you should start thinking about a color scheme</p>
-<p>ill find and send you a few</p>
-<p>aesthetic? thats something major you need to think about</p>
-<p>brand identity</p>
 
 
 
