--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: Title Font;
-    src: url("Site Files/Fonts/bakery.ttf");
+    src: url("bakery.ttf");
 }
 
 .center{
