--- a/Site Files/Code/index.html
+++ b/Site Files/Code/index.html
@@ -60,9 +60,9 @@ p{
 
 
 
-<img src="placeholder.png" alt="placeholder" width="400" height="400" align="left">
-<img src="placeholder.png" alt="placeholder" width="618" height="618" align="center">
-<img src="placeholder.png" alt="placeholder" width="400" height="400" align="right">
+<img src="Site Files/Images/placeholder.png" alt="placeholder" width="400" height="400" align="left">
+<img src="Site Files/Images/placeholder.png" alt="placeholder" width="618" height="618" align="center">
+<img src="Site Files/Images/placeholder.png" alt="placeholder" width="400" height="400" align="right">
 
 
 
