--- a/Site Files/Code/index.html
+++ b/Site Files/Code/index.html
@@ -60,9 +60,9 @@ p{
 
 
 
-<img src="https://user-images.githubusercontent.com/62418317/83506209-307d5e80-a50a-11ea-8b9b-de0edeb051af.png" alt="placeholder" width="400" height="400" align="left">
-<img src="https://user-images.githubusercontent.com/62418317/83506209-307d5e80-a50a-11ea-8b9b-de0edeb051af.png" alt="placeholder" width="618" height="618" align="center">
-<img src="https://user-images.githubusercontent.com/62418317/83506209-307d5e80-a50a-11ea-8b9b-de0edeb051af.png" alt="placeholder" width="400" height="400" align="right">
+<img src="placeholder.png" alt="placeholder" width="400" height="400" align="left">
+<img src="placeholder.png" alt="placeholder" width="618" height="618" align="center">
+<img src="placeholder.png" alt="placeholder" width="400" height="400" align="right">
 
 
 
