--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 @font-face {
     font-family: Title Font;
-    src: url("bakery.ttf");
+    src: url("/bakery.ttf");
 }
 
 .center{
@@ -60,9 +60,9 @@ p{
 
 
 
-<img src="placeholder.png" alt="placeholder" width="400" height="400" align="left">
-<img src="placeholder.png" alt="placeholder" width="618" height="618" align="center">
-<img src="placeholder.png" alt="placeholder" width="400" height="400" align="right">
+<img src="/placeholder.png" alt="placeholder" width="400" height="400" align="left">
+<img src="/placeholder.png" alt="placeholder" width="618" height="618" align="center">
+<img src="/placeholder.png" alt="placeholder" width="400" height="400" align="right">
 
 
 
