--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@ p{
 </head>
 
 <body>
+
+    <a href="index.html"><img src="/homepage.png" alt ="homepage"></a>
+    
+    
+
+
 <h1>SejDyes</h1>
 
 
