--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ p{
 <body>
 
 <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100" align="margin-left"></a>
-<a href="store.html"><img src="/storeImage.png" alt ="homepage" width = "200" height="100" align="margin-left"></a> 
+<a href="store.html"><img src="/storeImage.png" alt ="homepage" width = "200" height="100" align="margin-right"></a> 
 <h1>SejDyes</h1>
 
 
