--- a/store.html
+++ b/store.html
@@ -4,6 +4,13 @@
 
 
     <title>SejDyes: Buy</title>
+
+    <style>
+
+        body{
+            background-color: linen;
+        }
+    </style>
 </head>
 
 <body>
@@ -12,7 +19,7 @@
 
 
 
-    
+
 </body>
 
 
