--- a/store.html
+++ b/store.html
@@ -8,7 +8,7 @@
     <style>
 
         body{
-            background-color: linen;
+            background-color: aliceblue;
         }
     </style>
 </head>
