--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@ p{
 <body>
 
 <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100" align="margin-left"></a>
-<a href="store.html"><img src="/storeImage.png" alt ="homepage" width = "500" height="200" align="margin-right"></a> 
+<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100" align="margin-right"></a> 
 
-<p>test</p>
 <h1>SejDyes</h1>
 
 
