--- a/store.html
+++ b/store.html
@@ -3,20 +3,39 @@
 <head>
 
 
-    <title>SejDyes: Buy</title>
+<title>SejDyes: Buy</title>
 
-    <style>
+<style>
 
-        body{
-            background-color: linen;
-        }
-    </style>
+ body{
+     background-color: linen;
+} 
+@font-face {
+    font-family: Title Font;
+    src: url("/bakery.ttf");
+}
+
+h1{
+
+
+font-family: Title Font;
+color:rgb(235, 175, 107);
+
+font-size: 500px;
+height: 500px;
+
+
+
+text-align: center;
+}
+</style>
+
 </head>
 
 <body>
 
 
-
+<h1></h1>
 
 
 
