--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body{
 }
 
 h1{
-
+    
 
     font-family: Title Font;
     color:rgb(235, 175, 107);
@@ -47,6 +47,10 @@ p{
     font-size: larger;
     text-align: center;
 
+}
+
+img{
+    display: inline;
 }
 
 </style>
