--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body{
 }
 
 h1{
-    
+    display: block;
 
     font-family: Title Font;
     color:rgb(235, 175, 107);
@@ -50,7 +50,7 @@ p{
 }
 
 img{
-    display: inline;
+    display: block;
 }
 
 </style>
