--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ h1{
     
 
     text-align: center;
+    
 
 
 }
@@ -60,7 +61,7 @@ img{
 <body>
 
 <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100" align="margin-left"></a>
-<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100" align="margin-right"></a> <h1>SejDyes</h1>
+<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100" align="margin-right"></a> <h1 class="center">SejDyes</h1>
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce imperdiet ipsum sed finibus rutrum. Cras eget nulla efficitur, molestie elit ut, tempus ligula. Donec auctor ornare urna, id feugiat mauris euismod sit amet. Integer et orci orci. Aliquam consectetur congue mollis. Donec finibus varius eros, tempus luctus libero pretium vitae. Mauris eu purus nec nunc aliquam finibus sed aliquet ante. Integer sem neque, consequat vitae lobortis ut, sollicitudin quis lectus. Duis quis ullamcorper purus. Nullam tellus mi, aliquet iaculis erat at, sollicitudin lobortis lorem.</p>
