--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@ body{
 }
 
 h1{
-    display: inline;
+    display: block;
 
     font-family: Title Font;
     color:rgb(235, 175, 107);
 
     font-size: 500px;
-    height: 500px;
 
     
 
