--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@ h1{
 
     text-align: center;
     
-
-
 }
 
 p{
@@ -50,6 +48,8 @@ p{
     font-size: larger;
     text-align: center;
 
+    padding-bottom:0;
+    margin-bottom: 0px;
 }
 
 
