--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h1{
 
     font-size: 500px;
 
-    height:300;
+    height:350;
 
     
 
@@ -60,8 +60,8 @@ p{
 
 <body>
 
-<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100" align="margin-left" display="block"></a>
-<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100" align="margin-right"></a> <h1 class="center" display="block">SejDyes</h1>
+<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;" ></a>
+<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: block; float: left;"></a> <h1 class="center" style="display:block">SejDyes</h1>
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
