added aboutus page

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@ h1{
 
     font-size: 500px;
 
-    height:350;
-
-    
+    height:450;
 
     text-align: center;
     
@@ -58,7 +56,10 @@ p{
 <body>
 
 <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;" ></a>
-<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: block; float: left;"></a> <h1 class="center" style="display:block">SejDyes</h1>
+<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: block; float: left;"></a> 
+<a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "200" height="100"  style="display: block; float: left;"></a>
+
+<h1 class="center" style="display:block">SejDyes</h1>
 
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
