--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     display:block;
     margin-left:auto;
     margin-right: auto;
+    text-emphasis: center;
 }
 
 .right{
@@ -55,7 +56,7 @@ p{
 
 <body>
 
-<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;" ></a>
+<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;"></a>
 <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: block; float: left;"></a> 
 <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "200" height="100"  style="display: block; float: left;"></a>
 
