--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ p{
     orci orci. Aliquam consectetur congue mollis. Donec finibus varius eros, tempus luctus libero pretium vit
     ae. Mauris eu purus nec nunc aliquam finibus sed aliquet ante. Integer sem neque, consequat vitae lobortis ut, s
     ollicitudin quis lectus. Duis quis ullamcorper purus. Nullam tellus mi, aliquet iaculis erat at, sollicitudin lobort
-    is lorem.       618</p>
+    is lorem.</p>
 
 
 
