--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,9 @@ body{
     background-color: linen;
 }
 
+p{
+    display: inline;
+}
 
 
 
@@ -14,9 +17,19 @@ body{
 </head>
 
 <body>
+    <p>click on </p><a href=" https://assets.learnosity.com/organisations/447/770f8b42-8f7f-4353-929b-ad2aa36acb50.png"><p>this </p></a><p> for a surprise. </p> 
+    <a href="https://assets.learnosity.com/organisations/447/b38e9f9a-28e6-4f83-ae52-3c2e5913d50a.png"><p>and this</p></a>
+
+    <br>
+    <br>
+
 
     <p> this is something you guys should probably write, but I could if you wanted me to.</p>
     <p> for now ill work on the formatting</p>
+
+
+
+    
 
 
     <div style="display: inline; text-align: center;">
