--- a/aboutus.html
+++ b/aboutus.html
@@ -11,21 +11,32 @@ p{
     display: inline;
 }
 
+img{
+    
+}
+
+.center{
+    display:block;
+    margin-left:auto;
+    margin-right: auto;
+    text-emphasis: center;
+}
+
 
 
 </style>
 </head>
 
 <body>
-    <p>click on </p><a href=" https://assets.learnosity.com/organisations/447/770f8b42-8f7f-4353-929b-ad2aa36acb50.png"><p>this </p></a><p> for a surprise. </p> 
-    <a href="https://assets.learnosity.com/organisations/447/b38e9f9a-28e6-4f83-ae52-3c2e5913d50a.png"><p>and this</p></a>
 
     <br>
     <br>
 
 
     <p> this is something you guys should probably write, but I could if you wanted me to.</p>
-    <p> for now ill work on the formatting</p>
+    <br>
+    <br>
+    <p> format looks good, ill change the font, and we'll get photos of you guys at some point, whether you want to do that yourself or I could take photos some time idk</p>
 
 
 
@@ -33,25 +44,30 @@ p{
 
 
     <div style="display: inline; text-align: center;">
-        <h1 >title</h1>
-        <img src="ADD SOURCE.png" alt="image" width="100" height="=100" style="margin-left:auto; margin-right: auto;">
+        <h1 >Shekinah</h1>
+        <img src="ADD SOURCE.png" alt="image" width="300" height="300" class="center">
+        <p class="center">description, email me what you want put here</p>
 
     </div>
 
-    <divs tyle="display: inline;">
-        <h1  >title</h1>
-        <img src="ADD SOURCE.png" alt="image" width="100" height="=100">
+    <div style="display: inline; text-align: center;">
+        <h1  >Emma</h1>
+        <img src="ADD SOURCE.png" alt="image" width="300" height="300" class="center">
+        <p class="center">description, email me what you want put here</p>
 
     </div>
 
-    <div style="display: inline;">
-        <h1>title</h1>
-        <img src="ADD SOURCE.png" alt="image" width="100" height="=100">
+    <div style="display: inline; text-align: center;">
+        <h1>Jojo</h1>
+        <img src="ADD SOURCE.png" alt="image" width="300" height="300" class="center">
+        <p class="center">description, email me what you want put here</p>
 
     </div>
 
     <br>
     <br>
+
+    <p> this is the order of sej so thats what I did, but if you want something else i can do that</p>
 
 
 
