--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@ p{
 
 
 <img src="/placeholder.png" alt="placeholder" display="block" width="400" height="400" float="left">
+<p> photo 1</p>
 <img src="/placeholder.png" alt="placeholder" display="block"width="605" height="605"  float="left">
+<p> photo 2</p>
 <img src="/placeholder.png" alt="placeholder" display="block"width="400" height="400"  float="left"">
+<p> photo 3</p>
 
 
 
