updated aboutus and index

--- a/aboutus.html
+++ b/aboutus.html
@@ -35,6 +35,9 @@ p{
     <br>
     <p> format looks good, ill change the font, and we'll get photos of you guys at some point, whether you want to do that yourself or I could take photos some time idk</p>
 
+    <p> example text </p>
+    <p>We are a ground of students who were inspired to create beautiful, hand crafted tie-dye [IDK IF ITS LIKE SHIRTS OR JUMPERS].</p>
+
 
 
     
