--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html = "UTF-8">
 <html>
 <head>
-<title>SejDyes: Handcrafted Tie-dyes</title>
+<title>SejDyes: Handcrafted Tie-Dyes</title>
 
 <style>
 
@@ -63,13 +63,7 @@ p{
 <h1 class="center" style="display:block">SejDyes</h1>
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-    Fusce imperdiet ipsum sed finibus rutrum. Cras eget nulla efficitur, molestie 
-    elit ut, tempus ligula. Donec auctor ornare urna, id feugiat mauris euismod sit amet. Integer et 
-    orci orci. Aliquam consectetur congue mollis. Donec finibus varius eros, tempus luctus libero pretium vit
-    ae. Mauris eu purus nec nunc aliquam finibus sed aliquet ante. Integer sem neque, consequat vitae lobortis ut, s
-    ollicitudin quis lectus. Duis quis ullamcorper purus. Nullam tellus mi, aliquet iaculis erat at, sollicitudin lobort
-    is lorem.</p>
+
 
 
 
