--- a/index.html
+++ b/index.html
@@ -63,16 +63,15 @@ p{
 <h1 class="center" style="display:block">SejDyes</h1>
 
 
-
+<p>We are SejDyes, ready to create all sorts of Tie-dye clothing and apparel.</p>
+<br>
+<p>We handcraft on-demand, our creation usually arrive within [TIME PERIOS].*</p>
 
 
 
 <img src="/placeholder.png" alt="placeholder" display="block" width="400" height="400" float="left">
-<p> photo 1</p>
 <img src="/placeholder.png" alt="placeholder" display="block"width="605" height="605"  float="left">
-<p> photo 2</p>
 <img src="/placeholder.png" alt="placeholder" display="block"width="400" height="400"  float="left"">
-<p> photo 3</p>
 
 
 
