--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     margin-right: right;
 }
 
+@font-face {
+    font-family: Paragraph Font;
+    src: url("/dosis.ttf");
+}
+
 
 body{
     background-color: linen;
@@ -46,6 +51,7 @@ p{
     display: block;
     font-size: larger;
     text-align: center;
+    font-family: Paragraph Font;
 }
 
 
