--- a/aboutus.html
+++ b/aboutus.html
@@ -35,8 +35,12 @@ p{
     <br>
     <p> format looks good, ill change the font, and we'll get photos of you guys at some point, whether you want to do that yourself or I could take photos some time idk</p>
 
+    <br>
+    <br>
     <p> example text </p>
-    <p>We are a ground of students who were inspired to create beautiful, hand crafted tie-dye [IDK IF ITS LIKE SHIRTS OR JUMPERS].</p>
+    <br>
+    <br>
+    <p class="center">We are a ground of students who were inspired to create beautiful, hand crafted tie-dye [IDK IF ITS LIKE SHIRTS OR JUMPERS].</p>
 
 
 
