font change + resize

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ h1{
 
 p{
     display: block;
-    font-size: larger;
+    font-size: 40px;
     text-align: center;
     font-family: Paragraph Font;
 }
@@ -70,7 +70,6 @@ p{
 
 
 <p>We are SejDyes, ready to create all sorts of Tie-dye clothing and apparel.</p>
-<br>
 <p>We handcraft on-demand, our creation usually arrive within [TIME PERIOS].*</p>
 
 
