--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
 body{
-    background-color: linen;
+    background-color:linen;
 }
 
 h1{
@@ -70,7 +70,7 @@ p{
 
 
 <p>We are SejDyes, ready to create all sorts of Tie-dye clothing and apparel.</p>
-<p>We handcraft on-demand, our creation usually arrive within [TIME PERIOS].*</p>
+<p>We handcraft on-demand, our creation usually arrive within [TIME PERIOD].*</p>
 
 
 
