--- a/aboutus.html
+++ b/aboutus.html
@@ -49,7 +49,7 @@ p{
 
     <div style="display: inline; text-align: center;">
         <h1 >Shekinah</h1>
-        <img src="ADD SOURCE.png" alt="image" width="300" height="300" class="center">
+        <img src="ADD SOURCE.png" alt="image" width="1000" height="1000" class="center" border="50">
         <p class="center">description, email me what you want put here</p>
 
     </div>
