--- a/aboutus.html
+++ b/aboutus.html
@@ -49,21 +49,21 @@ p{
 
     <div style="display: inline; text-align: center;">
         <h1 >Shekinah</h1>
-        <img src="ADD SOURCE.png" alt="image" width="1000" height="1000" class="center" border="50">
+        <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="7500" class="center" border="25">
         <p class="center">description, email me what you want put here</p>
 
     </div>
 
     <div style="display: inline; text-align: center;">
         <h1  >Emma</h1>
-        <img src="ADD SOURCE.png" alt="image" width="300" height="300" class="center">
+        <img src="ADD SOURCE.png" alt="Emma" width="750" height="7500" class="center" border="25">
         <p class="center">description, email me what you want put here</p>
 
     </div>
 
     <div style="display: inline; text-align: center;">
         <h1>Jojo</h1>
-        <img src="/jojo.png" alt="image" width="300" height="300" class="center">
+        <img src="/jojo.png" alt="Jojo" width="750" height="7500" class="center" border="25">
         <p class="center">description, email me what you want put here</p>
 
     </div>
