--- a/aboutus.html
+++ b/aboutus.html
@@ -26,6 +26,8 @@ p{
 
 <body>
 
+<h1>todo= font; get them to send me a description; get them to send me photos (not jojo)</h1>
+
     <br>
     <br>
 
@@ -49,21 +51,21 @@ p{
 
     <div style="display: inline; text-align: center;">
         <h1 >Shekinah</h1>
-        <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="750" class="center" border="25">
+        <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="750" class="center" border="10">
         <p class="center">description, email me what you want put here</p>
 
     </div>
 
     <div style="display: inline; text-align: center;">
         <h1  >Emma</h1>
-        <img src="ADD SOURCE.png" alt="Emma" width="750" height="750" class="center" border="25">
+        <img src="ADD SOURCE.png" alt="Emma" width="750" height="750" class="center" border="10">
         <p class="center">description, email me what you want put here</p>
 
     </div>
 
     <div style="display: inline; text-align: center;">
         <h1>Jojo</h1>
-        <img src="/jojo.png" alt="Jojo" width="750" height="750" class="center" border="25">
+        <img src="/jojo.png" alt="Jojo" width="750" height="750" class="center" border="10">
         <p class="center">description, email me what you want put here</p>
 
     </div>
