--- a/aboutus.html
+++ b/aboutus.html
@@ -3,11 +3,18 @@
 <head>
 
 <style>
+
 body{
     background-color: linen;
 }
 
+@font-face {
+    font-family: Paragraph Font;
+    src: url("/dosis.ttf");
+}
+
 p{
+    font-family: Paragraph Font;
     display: inline;
 }
 
@@ -26,7 +33,7 @@ p{
 
 <body>
 
-<h1>todo= font; get them to send me a description; get them to send me photos (not jojo)</h1>
+<h1>todo= font; get them to send me a description; get them to send me photos (not jojo) </h1>
 
     <br>
     <br>
