added links to index and other pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -33,6 +33,10 @@ p{
 
 <body>
 
+    <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;"></a>
+<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: block; float: left;"></a> 
+<a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "200" height="100"  style="display: block; float: left;"></a>
+
 <h1>todo= font; get them to send me a description; get them to send me photos (not jojo) </h1>
 
     <br>
