updated aboutus info

--- a/aboutus.html
+++ b/aboutus.html
@@ -16,6 +16,8 @@ body{
 p{
     font-family: Paragraph Font;
     display: inline;
+    font-size: 50px;
+
 }
 
 
@@ -23,7 +25,7 @@ p{
     display:block;
     margin-left:auto;
     margin-right: auto;
-    text-emphasis: center;
+    text-align: center;
 }
 
 
@@ -33,27 +35,28 @@ p{
 
 <body>
 
-    <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;"></a>
+<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;"></a>
 <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: block; float: left;"></a> 
 <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "200" height="100"  style="display: block; float: left;"></a>
+
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <h1>todo= font; get them to send me a description; get them to send me photos (not jojo) </h1>
 
     <br>
-    <br>
-
-
-    <p> this is something you guys should probably write, but I could if you wanted me to.</p>
-    <br>
-    <br>
-    <p> format looks good, ill change the font, and we'll get photos of you guys at some point, whether you want to do that yourself or I could take photos some time idk</p>
 
     <br>
     <br>
-    <p> example text </p>
-    <br>
-    <br>
-    <p class="center">We are a ground of students who were inspired to create beautiful, hand crafted tie-dye [IDK IF ITS LIKE SHIRTS OR JUMPERS].</p>
+    <p class="center" size="500"">We are a ground of students who were inspired to create beautiful, hand crafted tie-dye shirts and jumpers, as well as possibly others on request.</p>
 
 
 
