--- a/aboutus.html
+++ b/aboutus.html
@@ -28,6 +28,20 @@ p{
     text-align: center;
 }
 
+.title{
+    display: block;
+
+    font-family: Title Font;
+    color:rgb(235, 175, 107);
+
+    font-size: 500px;
+
+    height:10;
+
+    text-align: center;
+    
+}
+
 
 
 </style>
@@ -50,12 +64,11 @@ p{
 <br>
 <br>
 
-<h1>todo= font; get them to send me a description; get them to send me photos (not jojo) </h1>
 
-    <br>
 
-    <br>
-    <br>
+<h1 class="center title" style="display:block">SejDyes</h1>
+
+   
     <p class="center" size="500"">We are a ground of students who were inspired to create beautiful, hand crafted tie-dye shirts and jumpers, as well as possibly others on request.</p>
 
 
@@ -83,13 +96,6 @@ p{
         <p class="center">description, email me what you want put here</p>
 
     </div>
-
-    <br>
-    <br>
-
-    <p> this is the order of sej so thats what I did, but if you want something else i can do that</p>
-
-
 
 
 
