--- a/aboutus.html
+++ b/aboutus.html
@@ -9,6 +9,11 @@ body{
 }
 
 @font-face {
+    font-family: Title Font;
+    src: url("/bakery.ttf");
+}
+
+@font-face {
     font-family: Paragraph Font;
     src: url("/dosis.ttf");
 }
