--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ p{
 <h1 class="center" style="display:block">SejDyes</h1>
 
 
-<p>We are SejDyes, ready to create all sorts of Tie-dye clothing and apparel.</p>
+<p>Welcome to SejDyes, ready to create all sorts of Tie-dye clothing and apparel.</p>
 <p>We handcraft on-demand, our creation usually arrive within [TIME PERIOD].*</p>
 
 
