--- a/aboutus.html
+++ b/aboutus.html
@@ -33,7 +33,21 @@ p{
     text-align: center;
 }
 
-.title{
+.name{
+    display: block;
+
+    font-family: Title Font;
+    color:rgb(235, 175, 107);
+
+    font-size: 100px;
+
+    height:10;
+
+    text-align: center;
+}
+
+
+h1{
     display: block;
 
     font-family: Title Font;
@@ -44,8 +58,9 @@ p{
     height:10;
 
     text-align: center;
-    
 }
+
+
 
 
 
@@ -66,22 +81,22 @@ p{
     
 
 
-    <div style="display: inline; text-align: center;">
-        <h1 >Shekinah</h1>
+    <div style="display: inline;">
+        <h1 class="name">Shekinah</h1>
         <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="750" class="center" border="10">
         <p class="center">description, email me what you want put here</p>
 
     </div>
 
     <div style="display: inline; text-align: center;">
-        <h1  >Emma</h1>
+        <h1   class="name">Emma</h1>
         <img src="ADD SOURCE.png" alt="Emma" width="750" height="750" class="center" border="10">
         <p class="center">description, email me what you want put here</p>
 
     </div>
 
     <div style="display: inline; text-align: center;">
-        <h1>Jojo</h1>
+        <h1   class="name">Jojo</h1>
         <img src="/jojo.png" alt="Jojo" width="750" height="750" class="center" border="10">
         <p class="center">description, email me what you want put here</p>
 
