--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>SejDyes: About Us</title>
+<title>V1 SejDyes: About Us</title>
 <style>
 
 body{
@@ -74,7 +74,7 @@ h1{
     
     <h1 class="center" style="display:block">SejDyes</h1>
    
-    <p class="center" size="500"">We are a ground of students who were inspired to create beautiful, hand crafted tie-dye shirts and jumpers, as well as possibly others on request.</p>
+    <p class="center" size="500"">[general paragraph about the entire business]</p>
 
 <br>
 
