--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ p{
 <h1 class="center" style="display:block">SejDyes</h1>
 
 
-<p>Welcome to SejDyes, ready to create all sorts of Tie-dye clothing and apparel.</p>
-<p>We handcraft on-demand, our creation usually arrive within [TIME PERIOD].*</p>
+<p>[a welcome message]</p>
+<p>[perhaps a brief summary of the business]</p>
 
 
 
