attempted to remove gap

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>V2 SejDyes: About Us</title>
+<title>V3 SejDyes: About Us</title>
 <style>
 
 body{
@@ -27,7 +27,7 @@ p{
 
 
 .center{
-    display:block;
+    display:inline;
     margin-left:auto;
     margin-right: auto;
     text-align: center;
@@ -73,7 +73,8 @@ h1{
     <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: inline; "></a> 
     <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "200" height="100"  style="display: inline;"></a>
     
-    <h1 class="center" style="display:block">SejDyes</h1>
+    <center>  <h1 class="center" style="display:block">SejDyes</h1></center>
+  
    
     <p class="center" size="500"">[general paragraph about the entire business]</p>
 
