centered top items

--- a/aboutus.html
+++ b/aboutus.html
@@ -69,11 +69,11 @@ h1{
 </head>
 
 <body>
-  
+  <center>
     <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: inline;"></a>
     <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: inline; "></a> 
     <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "200" height="100"  style="display: inline;"></a>
-    
+</center>
 
     <center>  <h1 class="center" style="display:block">SejDyes</h1></center>
   
