--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@ p{
 
 <body>
 
-<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "200" height="100"  style="display: block; float:left;"></a>
-<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "200" height="100"  style="display: block; float: left;"></a> 
-<a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "200" height="100"  style="display: block; float: left;"></a>
+    <center>
+<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: block; float:left;"></a>
+<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: block; float: left;"></a> 
+<a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: block; float: left;"></a>
+</center>
 
 <h1 class="center" style="display:block">SejDyes</h1>
 
