switched some css to external file

--- a/aboutus.html
+++ b/aboutus.html
@@ -48,24 +48,14 @@ p{
 }
 
 
-h1{
-    display: block;
-
-    font-family: Title Font;
-    color:rgb(235, 175, 107);
-
-    font-size: 500px;
-
-    height:10;
-
-    text-align: center;
-}
-
 
 
 
 
 </style>
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
@@ -90,7 +80,7 @@ h1{
     
 
 <center> <div style="display: inline;">
-    <h1 class="name">Shekinah</h1>
+    <h2 class="name">Shekinah</h2>
     <br>
      <img src="ADD SOURCE.png" alt="Shekinah" width="750" height="750" class="center" border="10">
      <br>
@@ -105,7 +95,7 @@ h1{
 
 
     <center> <div style="display: inline; text-align: center;">
-       <h1   class="name">Emma</h1>
+       <h2   class="name">Emma</h2>
        <br>
         <img src="ADD SOURCE.png" alt="Emma" width="750" height="750" class="center" border="10">
         <br>
@@ -120,7 +110,7 @@ h1{
 <br>
 
     <center> <div style="display: inline; text-align: center;">
-        <h1   class="name">Jojo</h1>
+        <h2   class="name">Jojo</h2>
           <br>
              <img src="/jojo.png" alt="Jojo" width="750" height="750" class="center" border="10">
              <br>
