--- a/index.html
+++ b/index.html
@@ -17,11 +17,7 @@
     text-emphasis: center;
 }
 
-.right{
-    display: block;
-    margin-left: right;
-    margin-right: right;
-}
+
 
 @font-face {
     font-family: Paragraph Font;
@@ -33,19 +29,6 @@ body{
     background-color:linen;
 }
 
-h1{
-    display: block;
-
-    font-family: Title Font;
-    color:rgb(235, 175, 107);
-
-    font-size: 500px;
-
-    height:450;
-
-    text-align: center;
-    
-}
 
 p{
     display: block;
@@ -58,14 +41,17 @@ p{
 
 </style>
 
+
+<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
 
     <center>
-<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: block; float:left;"></a>
-<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: block; float: left;"></a> 
-<a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: block; float: left;"></a>
+<a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline"></a>
+<a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline"></a> 
+<a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
 </center>
 
 <h1 class="center" style="display:block">SejDyes</h1>
