fixed gap between image and title, edited css

--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
 
 
 
-.center{
-    display:block;
-    margin-left:auto;
-    margin-right: auto;
-    text-emphasis: center;
-}
-
 
 
 
@@ -26,13 +19,17 @@
 
 <body>
 
-    <center>
+<center>
 <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline"></a>
 <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline"></a> 
 <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
 </center>
 
-<h1 class="center" style="display:block">SejDyes</h1>
+<center>
+    <h1>SejDyes</h1>
+
+</center>
+
 
 
 <p>[a welcome message]</p>
