--- a/aboutus.html
+++ b/aboutus.html
@@ -60,7 +60,7 @@ body{
     <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline;"></a>
 </center>
 
-    <center>  <h1 class="center" style="display:block">SejDyes</h1></center>
+    <center>  <h1>SejDyes</h1></center>
   
   
    <center>  <p class="center" size="500"">[general paragraph about the entire business]</p></center>
