edited store and css

--- a/store.html
+++ b/store.html
@@ -5,37 +5,21 @@
 
 <title>SejDyes: Buy</title>
 
-<style>
-
- body{
-     background-color: linen;
-} 
-@font-face {
-    font-family: Title Font;
-    src: url("/bakery.ttf");
-}
-
-h1{
-
-
-font-family: Title Font;
-color:rgb(235, 175, 107);
-
-font-size: 500px;
-height: 500px;
-
-
-
-text-align: center;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
 
+    <center>
+        <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline"></a>
+        <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline"></a> 
+        <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
 
-<h1></h1>
+        <h1>SejDyes</h1>
+        </center>
+
+    
 
 
 
