--- a/aboutus.html
+++ b/aboutus.html
@@ -4,19 +4,6 @@
 <title>SejDyes: About Us</title>
 <style>
 
-body{
-    background-color: linen;
-}
-
-@font-face {
-    font-family: Title Font;
-    src: url("/bakery.ttf");
-}
-
-@font-face {
-    font-family: Paragraph Font;
-    src: url("/dosis.ttf");
-}
 
 
 
@@ -58,10 +45,10 @@ body{
     <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline;"></a>
     <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline; "></a> 
     <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline;"></a>
-</center>
 
-    <center>  <h1>SejDyes</h1></center>
-  
+
+<h1>SejDyes</h1></center>
+  <br>
   
    <center>  <p class="center" size="500"">[general paragraph about the entire business]</p></center>
   
