began work on store page

--- a/store.html
+++ b/store.html
@@ -7,6 +7,13 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
+<style>
+div{
+    display: block;
+}
+
+</style>
+
 </head>
 
 <body>
@@ -20,6 +27,15 @@
         </center>
 
     
+
+        <p>example format</p>
+        <div>
+            <h3>example title</h3>
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500"></a>
+            <h4>example price</h4>
+
+
+        </div>
 
 
 
