attempted to center text

--- a/store.html
+++ b/store.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 
-
 <title>SejDyes: Buy</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
 <style>
 div{
+    display: block;
+}
+
+img{
     display: block;
 }
 
@@ -24,15 +27,17 @@ div{
         <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
 
         <h1>SejDyes</h1>
-        </center>
+    </center>
 
     
 
         <p>example format</p>
         <div>
+            <center>
             <h3>example title</h3>
             <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500"></a>
             <h4>example price</h4>
+        </center>
 
 
         </div>
