--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
 <head>
 <title>SejDyes: Handcrafted Tie-Dyes</title>
 
-<style>
 
-
-
-
-
-
-</style>
+	
+<link rel='icon' href='favicon.ico' type='image/x-icon'/>
 
 
 <link rel="stylesheet" type="text/css" href="style.css">
