--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html = "UTF-8">
 <html>
 <head>
-<title>SejDyes: Handcrafted Tie-Dyes</title>
+<title>V2 SejDyes: Handcrafted Tie-Dyes</title>
 
 
 	
-<link rel='icon' href='favicon.ico' type='image/x-icon'/>
+<link rel='icon' href='icon.ico' type='image/x-icon'/>
 
 
 <link rel="stylesheet" type="text/css" href="style.css">
