--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>V3 SejDyes: Buy</title>
+<title>SejDyes: Buy</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
