--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>SejDyes: Buy</title>
+<title>v2 SejDyes: Buy</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
