--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>v2 SejDyes: Buy</title>
+<title>v3 SejDyes: Buy</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -17,6 +17,10 @@
     justify-content: center;
 
   
+}
+
+.item{
+    text-align: center;
 }
 
 </style>
