--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>v3 SejDyes: Buy</title>
+<title>v4 SejDyes: Buy</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -20,6 +20,7 @@
 }
 
 .item{
+    align-self: center;
     text-align: center;
 }
 
