--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>v4 SejDyes: Buy</title>
+<title>v5 SejDyes: Buy</title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -60,12 +60,12 @@
 
         <div class="container"> 
            
-            <h3>example title</h3>
+            <h3 class="item">example title</h3>
             <br>
  
             <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500"></a>
             <br>
-           <h4>example price</h4>
+           <h4 class="item">example price</h4>
      
 
 
