--- a/store.html
+++ b/store.html
@@ -13,6 +13,7 @@
 
 #target {
   text-align: center;
+  width: 100%;
 }
 
 #centerDiv {
@@ -21,11 +22,11 @@
 
 .container{
   display:flex;
+  width:100%;
   flex-direction:column;
   align-items:center;
   justify-content:center;
 }
-
 </style>
 
 </head>
