--- a/store.html
+++ b/store.html
@@ -23,6 +23,11 @@
   grid-row: 1;
 }
 
+.item2{
+  grid-column: 2;
+  grid-row: 1;
+}
+
 
 
 </style>
@@ -56,6 +61,16 @@
            <h4 id="centerDiv"">example price</h4>
           </div>
      
+
+          <div class="item2">
+            <h3 id="centerDiv">example title</h3>
+            <br>
+ 
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" class="container" id="target"></a>
+            <br>
+
+           <h4 id="centerDiv"">example price</h4>
+          </div>
 
 
 
