--- a/store.html
+++ b/store.html
@@ -49,7 +49,7 @@
 
 
 
-
+<div class="grid-container">
 
            <div class="item1">
             <h3 id="centerDiv">example title</h3>
@@ -72,7 +72,7 @@
            <h4 id="centerDiv"">example price</h4>
           </div>
 
-
+        </div>
 
 
 
