--- a/store.html
+++ b/store.html
@@ -14,6 +14,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto auto;
   grid-gap: 50px;
   align-content: center;
 }
@@ -26,6 +27,26 @@
 .item2{
   grid-column: 2;
   grid-row: 1;
+}
+
+.item3{
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.item4{
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.item5{
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.item6{
+  grid-column: 2;
+  grid-row: 3;;
 }
 
 
@@ -48,31 +69,30 @@
         
 
 
-
+<center>
 <div class="grid-container">
 
            <div class="item1">
-            <h3 id="centerDiv">example title</h3>
+            <h3>example title</h3>
             <br>
- 
-            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" class="container" id="target"></a>
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" ></a>
             <br>
 
-           <h4 id="centerDiv"">example price</h4>
+           <h4>example price</h4>
           </div>
      
 
           <div class="item2">
-            <h3 id="centerDiv">example title</h3>
+            <h3>example title</h3>
             <br>
- 
-            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" class="container" id="target"></a>
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500"></a>
             <br>
 
-           <h4 id="centerDiv"">example price</h4>
+           <h4">example price</h4>
           </div>
 
         </div>
+      </center>
 
 
 
