--- a/store.html
+++ b/store.html
@@ -88,11 +88,48 @@
             <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500"></a>
             <br>
 
-           <h4">example price</h4>
+           <h4>example price</h4>
           </div>
 
-        </div>
-      </center>
+          <div class="item3">
+            <h3>example title</h3>
+            <br>
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" ></a>
+            <br>
+
+           <h4>example price</h4>
+          </div>
+     
+
+          <div class="item4">
+            <h3>example title</h3>
+            <br>
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500"></a>
+            <br>
+
+           <h4>example price</h4>
+          </div>
+
+          <div class="item5">
+            <h3>example title</h3>
+            <br>
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500" ></a>
+            <br>
+
+           <h4>example price</h4>
+          </div>
+     
+
+          <div class="item6">
+            <h3>example title</h3>
+            <br>
+            <a href = "EXAMPLE HTML"><img src="/placeholder.png" alt="example placeholder" width="500" height="500"></a>
+            <br>
+
+           <h4>example price</h4>
+          </div>
+</div>
+</center>
 
 
 
