--- a/store.html
+++ b/store.html
@@ -46,7 +46,20 @@
 
 .item6{
   grid-column: 2;
-  grid-row: 3;;
+  grid-row: 3;
+}
+
+.imageItem1{
+  grid-column: 1;
+  grid-row: 1;
+}
+.imageItem2{
+  grid-column: 2;
+  grid-row: 1;
+}
+.imageItem3{
+  grid-column: 3;
+  grid-row: 1;
 }
 
 
@@ -58,17 +71,16 @@
 <body>
 
     <center>
-        <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline"></a>
-        <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline"></a> 
-        <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline"></a>
-
+      <div class="grid-container">
+        <a class="imageItem1" href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150" ></a>
+        <a class="imageItem2" href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150" ></a> 
+        <a class="imageItem3" href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150" ></a>
+      </div>
         <h1>SejDyes</h1>
     </center>
 
  
         
-
-
 <center>
 <div class="grid-container">
 
@@ -129,8 +141,6 @@
           </div>
 </div>
 </center>
-
-
 
 </body>
 
