--- a/store.html
+++ b/store.html
@@ -51,10 +51,9 @@
 
 .image-grid-container{
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto auto auto auto;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
   grid-gap: 0px;
-  align-content: center;
 }
 
 .imageItem1{
@@ -80,9 +79,9 @@
 
     <center>
       <div class="image-grid-container">
-        <a class="imageItem1" href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150" ></a>
-        <a class="imageItem2" href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150" ></a> 
-        <a class="imageItem3" href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150" ></a>
+        <div class="imageItem1"><a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150" ></a></div>
+        <div class="imageItem2"><a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150" ></a> </div>
+        <div class="imageItem3"><a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150" ></a></div>
       </div>
         <h1>SejDyes</h1>
     </center>
