--- a/store.html
+++ b/store.html
@@ -50,6 +50,7 @@
 }
 
 .image-grid-container{
+  background-color: aliceblue;
   display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto;
