--- a/store.html
+++ b/store.html
@@ -55,6 +55,7 @@
   grid-template-columns: auto auto auto;
   grid-template-rows: auto;
   grid-gap: 0px;
+  justify-content: center;
 }
 
 .imageItem1{
