--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
 
+<style>
+
+
+
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto auto;
+  grid-gap: 50px;
+  align-content: center;
+}
+
+.item1{
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.item2{
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.item3{
+  grid-column: 3;
+  grid-row: 1;
+}
+
+</style>
+
 </head>
 
 <body>
@@ -31,10 +61,18 @@
 <p>[perhaps a brief summary of the business]</p>
 
 
+<div class="grid-container">
 
+<div class="item1">
 <img src="/placeholder.png" alt="placeholder" display="block" width="400" height="400" float="left">
+</div>
+<div class="item2">
 <img src="/placeholder.png" alt="placeholder" display="block"width="605" height="605"  float="left">
+</div>
+<div class="item3">
 <img src="/placeholder.png" alt="placeholder" display="block"width="400" height="400"  float="left"">
+</div>
+</div>
 
 
 
