--- a/store.html
+++ b/store.html
@@ -49,27 +49,6 @@
   grid-row: 3;
 }
 
-.image-grid-container{
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto;
-  grid-gap: 0px;
-  justify-content: center;
-}
-
-.imageItem1{
-  grid-column: 1;
-  grid-row: 1;
-}
-.imageItem2{
-  grid-column: 2;
-  grid-row: 1;
-}
-.imageItem3{
-  grid-column: 3;
-  grid-row: 1;
-}
-
 
 
 </style>
@@ -79,11 +58,11 @@
 <body>
 
     <center>
-      <div class="image-grid-container">
-        <div class="imageItem1"><a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150" ></a></div>
-        <div class="imageItem2"><a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150" ></a> </div>
-        <div class="imageItem3"><a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150" ></a></div>
-      </div>
+      <center>
+        <a href="index.html"><img src="/homeImage.png" alt ="homepage" width = "300" height="150"  style="display: inline;"></a>
+        <a href="store.html"><img src="/storeImage.png" alt ="store page" width = "300" height="150"  style="display: inline; "></a> 
+        <a href="aboutus.html"><img src="/aboutusImage.png" alt ="about us page" width = "300" height="150"  style="display: inline;"></a>
+    
         <h1>SejDyes</h1>
     </center>
 
